# ai-policy-radar

./: .gitignore  Makefile  README.md  RECAP.md  pyproject.toml
backend/data/: entity_seed.yaml  topics.yaml
backend/radar/: main.py
backend/radar/adapters/: base.py
backend/radar/adapters/research/: per_entity.py  url_verify.py
backend/radar/adapters/structured/: federal_register.py
backend/radar/api/: routes.py  schemas.py
backend/radar/awareness/: actions.py  embedding_model.py  engine.py  reasoner.py  retrieval.py
backend/radar/db/: connection.py  payload_schemas.py  schema.sql  storage.py
backend/radar/enrich/: pipeline.py
backend/radar/enrich/prompts/: _base.md  civil_society.md  company.md  executive_agency.md  judiciary.md  legislator.md
backend/radar/ingest/: orchestrator.py
backend/radar/profiles/: builder.py
backend/radar/scripts/: embed_all.py  enrich.py  ingest.py  seed_entities.py
backend/scripts/: ingest_zero_entities.py  snapshot_dashboards.py  test_awareness.py  test_enrichment.py  test_federal_register.py  test_ingest.py  test_profile_builder.py  test_research_adapter.py
evals/: cases.yaml  judge.py  report.md  run.py
frontend/: README.md  next.config.ts
frontend/app/: layout.tsx  loading.tsx  page.tsx
frontend/app/activity/[id]/: loading.tsx  page.tsx
frontend/app/entities/: loading.tsx  page.tsx
frontend/components/radar/: awareness-card.tsx  dashboard-view.tsx  entities-directory.tsx  profile-summary.tsx
frontend/lib/: api.ts  format.ts
frontend/public/snapshots/: 2c4771bfe57e.json  3d27db24e009.json  94cbcfb90d10.json  b80d5d3ddb26.json  entities.json  profile_2c4771bfe57e.json  profile_3d27db24e009.json  profile_94cbcfb90d10.json  profile_b80d5d3ddb26.json  profiles.json
(+101 files in other folders)
